<resources>
	
    <string name="app_name">Ultimate Logcat</string>
    <string name="crash_finder">Crash Finder</string>

    <string name="label_settings">Settings</string>

    <string name="shortcut_start_crash_finder">Start Crash Finder</string>

    <string name="action_filter">Filter logs</string>
    <string name="action_settings">Settings</string>
	
	<string name="done">Done</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="error">An error occurred</string>

    <string name="preference_category_log">Log</string>
    <string name="preference_category_interface">Interface</string>
    <string name="preference_category_crash_finder">Crash finder</string>

    <string name="preference_title_log_format">Log format</string>
    <string name="preference_title_log_buffer">Log buffer</string>
    <string name="preference_title_text_size">Text size</string>
    <string name="preference_title_text_font">Text font</string>
    <string name="preference_title_crash_finder_vibrate">Vibrate</string>
    <string name="preference_title_crash_finder_sound">Sound</string>

    <string name="text_api_level">In Android 4.1+ <i>READ_LOGS</i> permission is needed.</string>
    <string name="text_grant_root">Grant with root</string>
    <string name="text_grant_adb">Grant with ADB</string>
    <string name="text_adb_command">\"adb shell\"\n\"pm grant com.anrapps.ultimatelogcat android.permission.READ_LOGS\"</string>
	<string name="text_adb_steps">1.Activate USB debugging option\n2.Connect to ADB\n3.Insert the following two commands</string>
    <string name="text_root_error">An error occurred, try ADB method instead</string>
    <string name="text_crash_finder_started">Crash Finder started</string>
    <string name="text_looking_for_crashes">Looking for crashes…</string>
    <string name="text_found_crashes">%s crashes found</string>
    <string name="text_log_saved">Log saved to /UltimateLogcat</string>
	
	<string name="verbose_title">Verbose</string>
    <string name="debug_title">Debug</string>
    <string name="info_title">Info</string>
    <string name="warn_title">Warn</string>
    <string name="error_title">Error</string>
    <string name="assert_title">Assert</string>
    <string name="unknown_title">Unknown</string>
    <string name="brief_title">Brief</string>
    <string name="process_title">Process</string>
    <string name="tag_title">Tag</string>
    <string name="thread_title">Thread</string>
    <string name="raw_title">Raw</string>
    <string name="time_title">Time</string>
    <string name="long_title">Long</string>
    <string name="threadtime_title">Thread Time</string>

    <string-array name="log_levels">
        <item>Verbose</item>
        <item>Debug</item>
        <item>Information</item>
        <item>Warning</item>
        <item>Error</item>
        <item>Assert</item>
    </string-array>
    <string-array name="log_formats">
        <item>Brief</item>
        <item>Process</item>
        <item>Tag</item>
        <item>Thread</item>
        <item>Threadtime</item>
        <item>Time</item>
        <item>Long</item>
        <item>Raw</item>
    </string-array>
    <string-array name="log_buffers">
        <item>Main</item>
        <item>System</item>
        <item>Radio</item>
        <item>Events</item>
    </string-array>
    <string-array name="text_sizes">
        <item>Very small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Very large</item>
    </string-array>
    <string-array name="text_fonts">
        <item>Default</item>
        <item>Default bold</item>
        <item>Monospace</item>
        <item>Serif</item>
        <item>Sans serif</item>
    </string-array>
    <string-array name="preference_log_format_values">
        <item>BRIEF</item>
        <item>PROCESS</item>
        <item>TAG</item>
        <item>THREAD</item>
        <item>THREADTIME</item>
        <item>TIME</item>
        <item>LONG</item>
        <item>RAW</item>
    </string-array>
    <string-array name="preference_log_buffer_values">
        <item>MAIN</item>
        <item>SYSTEM</item>
        <item>RADIO</item>
        <item>EVENTS</item>
    </string-array>
    <string-array name="preference_text_size_values">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    <string-array name="preference_text_font_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
	
	
</resources>
